[package]
name = "qrart"
version = "0.1.0"
authors = ["artiga033 <artiga033@hotmail.com>"]
edition = "2018"
description = "Generate image-backgrounded QR Code."
repository = "https://github.com/artiga033/qrart"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcodegen = "1.7.0"
clap = { version = "^3.0.0-beta.5", features = ["yaml"] }
image = "^0"
